syntax = "proto3";

package rpx;
option go_package = "lib/rpx";


import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "types.proto";


service DashState {
  rpc UserSettings(pb.Empty) returns (DashUserSettingsState);
}

message DashFlash {
  string msg = 1;
  Type type = 2;

  enum Type {
    Undefined = 0;
    Success = 1;
    Warn = 2;
    Error = 3;
  }
}

message DashUserSettingsState {
  string email = 1;
  URLs urls = 6 [(gogoproto.customname) = "URLs"];
  repeated DashFlash flashes = 7;

  message URLs {
    string connect_google = 1;
    string connect_github = 2;
  }
}


//----------------------
// API Creds
//----------------------
service DashAPICreds {
  rpc Create(DashAPICredsCreateReq) returns (DashCred);
  rpc Update(DashAPICredsUpdateReq) returns (DashCred);
  rpc Delete(DashAPICredsDeleteReq) returns (DashCred);
}

message DashCred {
  string description = 2;
  string metadata = 3;
  string token = 4;
  pb.ID id = 7 [(gogoproto.customname) = "ID"];
}

message DashAPICredsCreateReq {
  string description = 1;
  string metadata = 2;
}

message DashAPICredsUpdateReq {
  string cred_sid = 1 [(gogoproto.customname) = "CredSID"];
  string description = 2;
  string metadata = 3;
  pb.ID id = 5 [(gogoproto.customname) = "ID"];
}

message DashAPICredsDeleteReq {
  string cred_sid = 1 [(gogoproto.customname) = "CredSID"];
  pb.ID id = 3 [(gogoproto.customname) = "ID"];
}
